# requirements-as-code

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  RAC-Explorer-Design-System.md  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  sbom.json  server.json
.agent-context/: BRIEF.md  CHANGES_SUMMARY.md  GAPS_TRACEABILITY.md  SCHEMA.md  cold-start-timing.md
.agent-context/gaps/: agent1.md  agent2.md  agent3.md  agent4.md  agent5.md
.cursor/: rules
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: guide-usage-report.yml
.github/workflows/: docs.yml  extension-release.yml  lore-web-build.yml  pr-checks.yml  python-publish.yml  sdk-release.yml  test-publish.yml  tests.yml  typescript.yml  watchkeeper.yml
.rac/: config.yaml
decisiongrounding/: CONTRIBUTING.md  EXPLAINER.md  README.md  conftest.py  pyproject.toml
decisiongrounding/decisions/: ADR-0001-harness-foundation.md  ADR-template.md
decisiongrounding/ingest/: peps.py
decisiongrounding/providers/: __init__.py  answering.py  context_dump.py  embedding.py  memory_provider.py  naive_rag.py  no_grounding.py  rac.py
decisiongrounding/runner/: __init__.py  cli.py
decisiongrounding/scenarios/conflicting_scoped_retry/: scenario.json
decisiongrounding/scenarios/conflicting_scoped_retry/corpus/: DG-ADR-RETRY-001.md  DG-ADR-RETRY-002.md
decisiongrounding/scenarios_real/peps_version_supersession/corpus/: PEP-0386.md  PEP-0440.md
decisiongrounding/schema/: run_result.schema.json
decisiongrounding/scoring/: __init__.py  crossover.py  metrics.py  scorer.py
decisiongrounding/spec/: scenario-taxonomy.md  scoring-rubric.md
decisiongrounding/tests/: test_arms_smoke.py  test_ingest_peps.py  test_real_backends.py  test_real_scenarios.py  test_schema.py  test_scorers.py
docs/: artifacts.md  cli.md  ecosystem.md  examples.md  governance.md  index.md  mcp.md  okf-profile.md  quickstart.md  relationships.md  repo-workflow.md  security.md  testing.md  v0.22-housekeeping-runbook.md  validation.md  watchkeeper.md
docs/research/: agent-memory-landscape.md
docs/stylesheets/: extra.css
examples/amp/: README.md  settings.example.json
examples/claude-code/: README.md
examples/codex/: README.md  config.example.toml
examples/copilot/: README.md  mcp.example.json
examples/cursor/: README.md  mcp.example.json
examples/guide/: demo.md
examples/obey-demo/: README.md  capture.md
examples/omnigent/: README.md  config.example.yaml
lore-overlay/: README.md
lore-overlay/app/: package.json
lore-overlay/app/src-tauri/: Cargo.toml  tauri.conf.json
lore-overlay/app/src-tauri/src/: lib.rs  main.rs
lore-web/: DESIGN.md  VIEWER_CONTRACT.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.viewer.ts  vitest.config.ts
lore-web/demo/: index.html
lore-web/design/: demo.cast
lore-web/scripts/: build-viewer-artifact.mjs  contrast-report.mjs  make-corpus.mjs  make-lantern.mjs  prerender-landing.mjs  record-demo.sh  vendor-portal-shell.mjs
lore-web/test/: App.test.tsx  fixtures.ts  graph.test.ts  setup.ts
lore-web/viewer/: index.html
overrides/: home.html
packaging/requirements-as-code-shim/: PUBLISHING.md  README.md  pyproject.toml
planning/adr/: adr-001-markdown-first.md  adr-002-ai-optional.md  adr-003-structured-outputs-first.md  adr-004-artifact-model.md  adr-005-cli-first.md  adr-006-ingest-over-rewrite.md  adr-007-json-contract-stability.md  adr-008-agent-ready-architecture.md  adr-009-ai-assisted-development.md  adr-010-documents-are-not-artifacts.md  adr-011-file-first-pipeline.md  adr-012-open-core-strategy  adr-013-leverage-existing-source-control-systems  adr-014-viewer-agnostic-knowledge-artifacts.md  adr-015-explorer-as-consumer  adr-016-relationships-as-structural-references.md  adr-017-rac-managed-knowledge-not-work.md
planning/designs/: explorer-command-surface.md  explorer-first-run-experience.md  explorer-health-model.md  explorer-import-workflow.md  explorer-knowledge-graph.md  explorer-mascot-interaction.md  explorer-visual-system.md
planning/prompt/: rac-agent-commit-guidelines.md  rac-agent-compression.md  rac-agent-instructions.md  (+4 more)
pr-gate-action/: action.yml
rac/: __init__.py  artifacts.py  cli.py  improve.py  ingest.py  inspect.py  outputs.py  relationships.py  schema.py  stats.py  validate.py
scripts/: generate_sbom.py
tests/: conftest.py  test_agent_rules.py  test_cadence.py  test_ci_batteries.py  test_cli.py  test_compare.py  test_coverage.py  test_create.py  test_decision_metadata.py  test_design.py  test_diff.py  test_doctor.py  test_documents_export.py  test_dogfood.py  test_eval.py  test_explain.py  test_explorer_adapter.py  test_explorer_app.py  test_explorer_cli.py  test_explorer_commands.py  test_explorer_editor.py  test_explorer_isolation.py  test_explorer_workspace.py  test_export_cmd.py  test_export_okf.py  test_find_decisions.py  test_frontmatter.py  test_gate.py  test_gate_perf.py  test_golden.py  test_graph_export.py  test_hook.py  test_idempotent.py  test_identity.py  test_idgen.py  test_improve.py  test_index.py  test_ingest.py  test_init.py  test_inspect.py  (+43 more)
typescript/: README.md
validate-action/: action.yml
verify/: README.md
wayfinder/: Dockerfile  EXPLAINER.md  LICENSE  Makefile  NOTICE  README.md  conftest.py  docker-compose.example.yml  pyproject.toml
wayfinder/decisions/: WF-ADR-0001-standalone-deterministic-router.md  WF-ADR-0002-tiered-routing.md  WF-ADR-0003-calibration-and-classifier.md  WF-ADR-0004-invocation-and-gateway.md  WF-ADR-0005-calibration-explain-ui.md  WF-ADR-0006-feedback-and-onboarding.md  WF-ADR-0007-scheduled-recalibration.md  WF-ADR-0008-packaging-and-integration.md  WF-ADR-0009-license-apache-2.md
wayfinder/tests/: test_calibrate.py  test_cli.py  test_complexity.py  test_config.py  test_explain.py  test_feedback.py  test_gateway.py  test_onboard.py  test_recalibrate.py  test_ui.py
wayfinder/wayfinder/: __init__.py  calibrate.py  cli.py  complexity.py  config.py  feedback.py  gateway.py  onboard.py  recalibrate.py  ui.py
(+702 files in other folders)
