[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-as-code"
# Version is derived from the git tag by setuptools-scm (see [tool.setuptools_scm]).
# Release flow: tag vX.Y.Z -> the build is version X.Y.Z. No manual edits.
dynamic = ["version"]
description = "RAC — lint and diff product requirements written in Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tcballard" }]
keywords = ["requirements", "product-management", "markdown", "linter", "cli", "diff"]
dependencies = ["markdown-it-py>=3.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://github.com/tcballard/requirements-as-code"
Repository = "https://github.com/tcballard/requirements-as-code"
Issues = "https://github.com/tcballard/requirements-as-code/issues"

[project.optional-dependencies]
# Document ingestion (rac ingest). Optional so the core install stays light, and
# split by format so users only pull the readers they need. HTML and Markdown
# need no extra (HTML is built into MarkItDown; Markdown is pass-through).
ingest = ["markitdown[docx]"]                        # DOCX (+ HTML, Markdown)
ingest-pdf = ["markitdown[pdf]"]                     # + PDF
ingest-office = ["markitdown[pptx,xlsx,xls]"]        # + PPTX / XLSX / XLS
ingest-all = ["markitdown[docx,pdf,pptx,xlsx,xls]"]  # every supported format
# dev also pulls the libraries used to *generate* fixture files in the tests.
dev = [
    "pytest>=7.0",
    "markitdown[docx,pdf,pptx,xlsx,xls]",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "reportlab",
]

[project.scripts]
rac = "rac.cli:main"

[tool.setuptools]
# src/ layout: the package root is src/, so the import package `rac` lives at
# src/rac/. The distribution and import names are unchanged.
package-dir = {"" = "src"}
packages = ["rac"]

[tool.setuptools_scm]
# Defaults are fine: version comes from the latest `vX.Y.Z` git tag.

[tool.pytest.ini_options]
testpaths = ["tests"]
