[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-as-code"
# Version is derived from the git tag by setuptools-scm (see [tool.setuptools_scm]).
# Release flow: tag vX.Y.Z -> the build is version X.Y.Z. No manual edits.
dynamic = ["version"]
description = "RAC — lint and diff product requirements written in Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tcballard" }]
keywords = ["requirements", "product-management", "markdown", "linter", "cli", "diff"]
dependencies = ["markdown-it-py>=3.0", "pyyaml>=6.0", "mcp>=1.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://github.com/tcballard/requirements-as-code"
Repository = "https://github.com/tcballard/requirements-as-code"
Issues = "https://github.com/tcballard/requirements-as-code/issues"

[project.optional-dependencies]
# Document ingestion (rac ingest). Optional so the core install stays light, and
# split by format so users only pull the readers they need. HTML and Markdown
# need no extra (HTML is built into MarkItDown; Markdown is pass-through).
ingest = ["markitdown[docx]"]                        # DOCX (+ HTML, Markdown)
ingest-pdf = ["markitdown[pdf]"]                     # + PDF
ingest-office = ["markitdown[pptx,xlsx,xls]"]        # + PPTX / XLSX / XLS
ingest-all = ["markitdown[docx,pdf,pptx,xlsx,xls]"]  # every supported format
# Interactive Explorer TUI (rac explorer, v0.8.0). Optional so the core
# install stays light; without it `rac explorer` prints an install hint.
explorer = ["textual>=1.0"]
# dev also pulls the libraries used to *generate* fixture files in the tests,
# plus the explorer extra so its batteries run headlessly in CI.
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-PyYAML",
    "textual>=1.0",
    "markitdown[docx,pdf,pptx,xlsx,xls]",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "reportlab",
]

[project.scripts]
rac = "rac.cli:main"

[tool.setuptools]
# src/ layout: the package root is src/, so the import package `rac` (and its
# layer subpackages rac.core/rac.services/rac.output/rac.explorer) lives under
# src/. The distribution and import names are unchanged.
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Discover rac and every rac.* subpackage automatically, so new layer packages
# do not need to be enumerated here.
where = ["src"]

[tool.setuptools.package-data]
# Canonical artifact templates ship with the distribution (v0.7.10, ADR-021):
# `rac new` loads them via importlib.resources, never from the repository.
# The vendored Portal shell and its provenance manifest ship the same way
# (v0.11.0): `rac export --html` loads them via importlib.resources.
"rac.templates" = ["*.md", "portal/*.html", "portal/*.json"]
# The Explorer stylesheet ships with the distribution (v0.8.7): the app loads
# it via CSS_PATH, resolved relative to the installed package.
"rac.explorer" = ["*.tcss"]
# The bundled Claude Code agent skill ships with the distribution (v0.10.4):
# `rac skill install` loads it via importlib.resources, never from the
# repository. A test pins it byte-for-byte to the dogfood copy (REQ-007).
"rac.skills" = ["*/SKILL.md"]

[tool.setuptools_scm]
# Defaults are fine: version comes from the latest `vX.Y.Z` git tag.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Quality gates pinned by v0.7.14 (Initiative 2). Golden tests pin CLI output
# byte-for-byte, so lint/format fixes must never change string contents.
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# MarkItDown ships no type stubs; it is imported lazily inside rac.services.ingest.
module = "markitdown.*"
ignore_missing_imports = true
