[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder"
version = "0.1.0"
description = "A deterministic prompt-complexity router: score a prompt's structure and recommend a local or cloud model — offline, reproducible, no model call."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
# Stdlib-only: scoring is pure text scanning and config is tomllib. Wayfinder has
# no runtime dependency on RAC or anything else (WF-ADR-0001).
dependencies = []

[project.optional-dependencies]
# The OpenAI-compatible routing gateway (WF-ADR-0004). The core never imports
# these; they are loaded lazily only when the gateway runs.
gateway = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
# The local calibration/explain/configure UI (WF-ADR-0005); lazily imported.
ui = ["fastapi>=0.110", "uvicorn>=0.27"]
# Test runner; includes fastapi + httpx so the gateway and UI are exercised in CI.
dev = ["pytest>=7", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
wayfinder = "wayfinder.cli:main"

[tool.setuptools]
packages = ["wayfinder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
