# Tauri v2 desktop shell. NOTE: not built or run in this repo's CI — it targets
# macOS and was developed in a Linux container. The capture logic it depends on
# (`lore-capture-core`) is fully tested. See ../../README.md.
[package]
name = "lore-capture-overlay"
version = "0.0.0"
edition = "2021"
description = "Desktop capture overlay for Lore (provisional name)."

[lib]
name = "lore_capture_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lore-capture-core = { path = "../../core", features = ["net"] }
